--- a/index.html
+++ b/index.html
@@ -23,14 +23,8 @@
             <h6>Style Tile Version X</h6>
             <hr>
 
-            <div class="row">
-              <div class="col-sm-12">
-                <h3 class="dark-grey">Site Background Colours</h3>
-                <hr>
-              </div>
-              <!-- .col-sm-12 -->
-            </div>
-            <!-- .row -->
+            <h3 class="dark-grey">Site Background Colours</h3>
+            <hr>
 
 
             <div class="row">
@@ -50,9 +44,7 @@
             <!-- .row -->
 
 
-
-          <div class="row">
-              <div class="col-sm-12 style-content">
+              <div class=" style-content">
                   <h3>Typography</h3>
                   <hr>
                   <h1>This is the primary heading</h1>
@@ -69,9 +61,8 @@
                   <p>Lorem ipsum Cillum consequat in voluptate do elit <a href="#">fugiat proident</a> consectetur quis proident quis ex non irure dolore laborum minim tempor pariatur est id voluptate elit commodo deserunt irure consectetur in dolore sint Ut aliqua aliquip ut pariatur magna exercitation tempor in est eiusmod ad sint laborum adipisicing esse deserunt elit ad in Duis voluptate consectetur nisi nulla fugiat nulla nisi reprehenderit in Duis consequat nostrud dolor ullamco culpa aliqua tempor in consectetur esse id pariatur ullamco voluptate velit ut culpa irure in mollit qui ad cupidatat velit dolore consectetur id nostrud ex adipisicing proident esse quis eu dolor deserunt occaecat est adipisicing est ullamco nulla dolore anim irure ex irure cupidatat labore id irure fugiat qui labore sed Excepteur et in deserunt sed ea ad aliquip.</p>
                   <p><small><em>Font: </em></small></p>
               </div>
-              <!-- col-sm-12 style-content -->
-          </div>
-          <!-- .row -->  
+              <!-- style-content -->
+
 
       </div>
       <!-- col-sm-6 style-content -->
@@ -130,10 +121,6 @@
             </div>
             <!-- .row --> 
 
-        <div class="row">
-
-          <div class="col-xs-12">
-
             <h3>Elements</h3>
             <hr>
             <h4>Social Icons</h4>
@@ -148,8 +135,8 @@
 
             <h4>Buttons</h4>
             <p>
-              <span class="btn btn-primary btn-lg">Primary button</span>
-              <span class="btn btn-default btn-lg">Secondary button</span>
+              <a class="btn btn-primary btn-lg">Primary button</a>
+              <a class="btn btn-default btn-lg">Secondary button</a>
             </p>
             <!-- Buttons -->
 
@@ -186,12 +173,6 @@
               </ul>
             </nav>
             <!-- Pagination -->
-
-          </div>
-          <!-- .col-xs-12 -->
-
-        </div>
-        <!-- .row -->
 
       </div>
       <!-- .col-sm-6 style-content -->
