--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
 
             <h4>Buttons</h4>
             <p>
-              <a class="btn btn-primary btn-lg">Primary button</a>
-              <a class="btn btn-default btn-lg">Secondary button</a>
+              <a href="#" class="btn btn-primary btn-lg">Primary button</a>
+              <a href="#" class="btn btn-default btn-lg">Secondary button</a>
             </p>
             <!-- Buttons -->
 
